--- a/css/index.css
+++ b/css/index.css
@@ -65,8 +65,24 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
+ header{
+    width: 800px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 30px;
+    align-items: baseline;
+    padding-bottom: 30px;
+}
 
+nav a {
+    text-decoration: none;
+    color: black;
+}
 
 .container {
     width: 800px;
