add padding to the body

--- a/css/index.css
+++ b/css/index.css
@@ -208,7 +208,7 @@ footer nav a {
     line-height: 1.6;
 }
 
-.about, .about-list, .lets-work{
+.about-intro, .about-list, .lets-work{
     margin: 15px;
 }
 
